--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 
-v1.2.2-SNAPSHOT(2013-xx-xx)
+v1.4.0-SNAPSHOT(2013-11-xx)
+---------------------------
+* support database (for 1.4 feature)
+* add support API: /_api/database
+* add configure: defaultDatabase
+
+v1.2.2(2013-07-10)
 ---------------------------
 
 * add support API: /_api/explain
