--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/database
 * add configure: defaultDatabase
 * getDocuments was changed to return document-handle
+* changed the version API endpoint. (/_admin/version -> /_api/version)
 
 v1.2.2(2013-07-10)
 ---------------------------
