fixed ArangoUnixTime bug.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,13 +4,14 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * support database (for 1.4 feature)
 * add support API: /_api/database
 * add configure: defaultDatabase
-* getDocuments was changed to return document-handle
-* changed the version API endpoint. (/_admin/version -> /_api/version)
-* remove: getServerStatus
 * add: getStatistics 
-* remove: getConnectionStatistics
 * add: statisticsDescription
 * add support API: /_api/endpoint
+* getDocuments was changed to return document-handle
+* changed the version API endpoint. (/_admin/version -> /_api/version)
+* fixed ArangoUnixTime bug.
+* remove: getServerStatus
+* remove: getConnectionStatistics
 
 v1.2.2(2013-07-10)
 ---------------------------
