--- a/ChangeLog
+++ b/ChangeLog
@@ -10,12 +10,14 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/collection/{collection-name}/checksum (getCollectionChecksum)
 *                  add attribute CollectionEntity#checksum
 * add support API: /_api/example/first
+* add support API: /_api/example/last
 * getDocuments was changed to return document-handle
 * changed the version API endpoint. (/_admin/version -> /_api/version)
 * fixed ArangoUnixTime bug.
 * remove: getServerStatus
 * remove: getConnectionStatistics
 * gson library upgrade to 2.2.4
+* refactoring deserialize of parameterized entity class.
 
 v1.2.2(2013-07-10)
 ---------------------------
