--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
 * add attribute: CollectionEntity.Figures#(compactorsCount,compactorsFileSize,shapefilesCount,shapefilesFileSize,shapesCount,attributesCount)
+* add doCompact to argument of createCollection 
 * remove attribute: CollectionEntity#createOptions
 * getDocuments was changed to return document-handle
 * changed the version API endpoint. (/_admin/version -> /_api/version)
