--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/example/first
 * add support API: /_api/example/last
 * add support API: /_api/replication/inventory
+* add support API: /_api/replication/dump
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
