--- a/ChangeLog
+++ b/ChangeLog
@@ -12,8 +12,8 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/collection/{collection-name}/checksum (getCollectionChecksum)
 * add support API: /_api/example/first
 * add support API: /_api/example/last
-* add support API: /_api/replication/inventory
-* add support API: /_api/replication/dump
+* add support API: /_api/replication/inventory (getReplicationInventory)
+* add support API: /_api/replication/dump (getReplicationDump)
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
