--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/example/last
 * add support API: /_api/replication/inventory (getReplicationInventory)
 * add support API: /_api/replication/dump (getReplicationDump)
+* add support API: /_api/replication/server-id (getReplicationServerId)
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
