--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/replication/inventory (getReplicationInventory)
 * add support API: /_api/replication/dump (getReplicationDump)
 * add support API: /_api/replication/server-id (getReplicationServerId)
+* add support API: /_api/replication/logger-start (startReplicationLogger)
+* add support API: /_api/replication/logger-stop (stopReplicationLogger)
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
