* add support API: GET /_api/replication/logger-state (getReplicationLoggerState)

--- a/ChangeLog
+++ b/ChangeLog
@@ -17,6 +17,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: /_api/replication/server-id (getReplicationServerId)
 * add support API: /_api/replication/logger-start (startReplicationLogger)
 * add support API: /_api/replication/logger-stop (stopReplicationLogger)
+* add support API: GET /_api/replication/logger-state (getReplicationLoggerState)
 * add support API: GET /_api/replication/logger-config (getReplicationLoggerConfig)
 * add support API: PUT /_api/replication/logger-config (setReplicationLoggerConfig)
 * add support API: GET /_api/replication/applier-config (getReplicationApplierConfig)
