* add support API: DELETE /_api/graph/{graph-name}/vertex/{document-key} (deleteVertex)

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,7 +31,8 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: GET /_api/graph/{graph-name} (getGraph)
 * add support API: DELETE /_api/graph/{graph-name} (deleteGraph)
 * add support API: POST /_api/graph/{graph-name}/vertex (createVertex)
-* add support API: GET /_api/graph/{graph-name}/vertex (getVertex)
+* add support API: GET /_api/graph/{graph-name}/vertex/{document-key} (getVertex)
+* add support API: DELETE /_api/graph/{graph-name}/vertex/{document-key} (deleteVertex)
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
