--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: GET /_api/graph/{graph-name}/vertex/{document-key} (getVertex)
 * add support API: DELETE /_api/graph/{graph-name}/vertex/{document-key} (deleteVertex)
 * add support API: PUT /_api/graph/{graph-name}/vertex/{document-key} (replaceVertex)
+* add support API: PATCH /_api/graph/{graph-name}/vertex/{document-key} (updateVertex)
 * add attribute: CollectionEntity#checksum
 * add attribute: CollectionEntity#doCompact
 * add attribute: CollectionEntity#keyOptions
