* add support API: POST /_api/graph/{graph-name}/vertices/{vertex-key} (getVertices)

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@ v1.4.0-SNAPSHOT(2013-11-xx)
 * add support API: PUT /_api/graph/{graph-name}/vertex/{document-key} (replaceVertex)
 * add support API: PATCH /_api/graph/{graph-name}/vertex/{document-key} (updateVertex)
 * add support API: POST /_api/graph/{graph-name}/vertices (getVertices)
+* add support API: POST /_api/graph/{graph-name}/vertices/{vertex-key} (getVertices)
 * add support API: POST /_api/graph/{graph-name}/edge (createEdge)
 * add support API: GET /_api/graph/{graph-name}/edge/{edge-key} (getEdge)
 * add support API: DELETE /_api/graph/{graph-name}/edge/{edge-key} (deleteEdge)
