--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 
 v1.4.1(2013-xx-xx)
 ---------------------------
-
+* rename attribute: UserEntity#user -> UserEntity#username
+* add support API: GET /_api/database/user (getDatabases)
+* modify API: createDatabase(db) -> createDatabase(db, users...)
 
 v1.4.0(2013-11-26)
 ---------------------------
